intro text cleanup

--- a/examples/KelvinGreenWriteup.tex
+++ b/examples/KelvinGreenWriteup.tex
@@ -34,15 +34,15 @@ Linear wave theory captures the essential physics of free-surface flows at a fra
 
 Linear potential theory for steady forward-speed wave problems captures the essential physics of ship-wave interaction at a tiny fraction of the computational cost of nonlinear and viscous solvers. This computational efficiency makes it valuable for applications where many evaluations are required: parametric design optimization, real-time motion prediction for control systems, and as the physics-informed backbone for machine learning surrogate models.
 
-The Kelvin Green's function provides a linear representation that exactly satisfies the free-surface boundary condition by construction. The function decomposes into a Rankine source-image pair and two additional terms: a smooth near-field integral and an oscillatory wavelike integral representing the radiated wave pattern. For submerged disturbances, practical evaluation methods have been available for decades. Peters (1949) established the integral representation, Noblesse (1981) reorganized it into smooth and oscillatory components, and Newman (1987) developed efficient Chebyshev surrogate representations for the smooth near-field term that remain widely used.
+The Kelvin Green's function for a steady translating disturbance exactly satisfies the linear free-surface boundary condition by construction. Peters (1949) established the integral representation for this function as a Rankine source-image pair and two additional terms: a smooth near-field integral and an oscillatory wavelike integral representing the radiated wave pattern (Noblesse 1981). For submerged disturbances, practical evaluation methods based on this approach have been available for decades including the fully analytic solution for a submerged spheroid by Farell (1978), and Newman (1987) developed efficient Chebyshev surrogate representations for the smooth near-field term that remains widely used for numerical methods.
 
-However, the most direct output of linear wave theory---the free-surface elevation---depends on the streamwise derivative of the wavelike potential evaluated at $z=0$, and this component is ill-posed in the point-source representation. In the classical Kelvin Green's function, the limit $z\to 0^-$ is non-uniform: the wave elevation spectrum $S_\zeta(k;z)$ peaks at $k^* \sim 1/|z|$ with amplitude $\sim 1/(|z|R)$, where $R$ is the planar distance from the source. As $|z|\to 0$ the peak migrates to arbitrarily high wavenumber while growing without bound, so no practical discretization can resolve the wavenumber content radiated over the extended downstream wake.
+However, the most direct output of linear wave theory---the free-surface elevation---depends on the streamwise derivative of the wavelike potential, and this component is ill-posed in the point-source representation as $|z|\to 0^-$. In the classical Kelvin Green's function, the limit is non-uniform: the wave elevation spectrum $S_\zeta(k;z)$ peaks at $k^* \sim 1/|z|$ with amplitude $\sim 1/(|z|R)$, where $R$ is the planar distance from the source. As $|z|\to 0^-$ the peak migrates to arbitrarily high wavenumber while growing without bound, so no practical discretization can resolve the wavenumber content radiated over the extended downstream wake.
 
 The problem is less severse for submeged bodies, but evaluation of the wavelike Green's function is still difficult for small submergence. Baar and Price (1988) developed a series representation, but the expansion is not uniformly convergent and does not have the correct asymptotic behaviour in the wake directly behind a disturbance. Iwashita and Ohkusu (1992) proposed a numerical steepest-descent approach, but unbounded wavenumbers and merging saddle points forced their method to be used well below $z=0$. Recent developments in numerical contour deformation (Huybrechs 2017; Gibbs \& Huybrechs 2024) provide a systematic framework for highly oscillatory integrals, but these methods are posed for analytic integrands, whereas the Kelvin wavelike integral has a non-analytic phase.
 
 For surface-piercing bodies, the free-surface limit becomes unavoidable. Baar and Price showed that the waterline contour contributes directly to the potential through a line integral that arises when Green's second identity is applied in the fluid domain. This contour term can have a leading-order influence on the wave field, yet its evaluation requires the Green's function precisely at the free surface---the regime where existing representations fail. Alternative formulations have been proposed to circumvent the waterline contribution. The Neumann-Michell approach of Noblesse, Huang, and Yang (2013) replaces the explicit Green's function with an implicit iterative scheme that avoids the contour integral entirely. While this sidesteps the numerical difficulty, it sacrifices the directness and efficiency of an explicit kernel evaluation. The present work retains the classical formulation and addresses the modelling and numerical obstacle directly.
 
-This paper addresses the $z\to 0^-$ limit directly, with an emphasis on what is required for finite free-surface predictions. The first contribution is analytical: Section~4 develops the limiting wave elevation spectrum $S_\zeta(k;0)\sim 1/(|z|R)$ stated above via stationary-phase analysis, showing that the point-source kernel is ill-posed; Section~5 then shows that the elliptic spanwise line integration inherent in waterline formulations resolves this completely, replacing the divergent spectrum with a finite, integrable $S_{b,\zeta}(t;0)\sim (J_1(bk(t))/t)^2$ that decays as $t^{-3}$. The second contribution is numerical: Section~6 develops a practical evaluator for both point and line kernels using contour deformation adapted to the non-analytic Kelvin phase, achieving $10^4$--$10^5$ speedup over direct quadrature while preserving the correct wake structure. 
+This paper addresses the $z\to 0^-$ limit with an emphasis on obtaining meaningful finite energy free-surface predictions. The first contribution is analytical: Section~4 develops the limiting wave elevation spectrum $S_\zeta(k;0)\sim 1/(|z|R)$ stated above via stationary-phase analysis, showing that the point-source kernel is ill-posed; Section~5 then shows that the elliptic spanwise line integration inherent in the waterline contribution resolves this completely, replacing the divergent spectrum with a finite, integrable $S_{b,\zeta}(t;0)\sim (J_1(bk(t))/t)^2$ that decays as $t^{-3}$. The second contribution is numerical: Section~6 develops a practical evaluator for both point and line kernels using contour deformation adapted to the non-analytic Kelvin phase, achieving $10^4$--$10^5$ speedup over direct quadrature while preserving the wave energy. 
 
 The paper also introduces flat-ship theory---a reduced model for shallow-draft, high-speed planforms---in which the entire exterior wave field collapses to two line-integrated kernel evaluations per field point (leading and trailing edges). The method is used to study the wavefield and wavedrag generated in the $z=0$ limit as a function of length and beam based Froude-number and shows (SOME COOL SHIT). An open-source Julia implementation is provided for reproducibility.
 
